@@ -1,3 +1,9 @@
+2000-07-25  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Group.pm (membertagset): Add tags system
+
+	* Frame.pm (tagretrieve): Add tags system
+
 2000-07-21  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Calib/SCUBA.pm: Add support for BEAM and ARCSEC units in gain determination. 
